# kirq-hub

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  build.sh  config.example.toml  config.production.toml  start_with_priority_queue.sh
benches/: mixing.rs
docs/: QUANTUM_RNG_DELIVERY_ARCHITECTURE.md  quantum_safe_transmission.md
examples/kirq-demo/: .gitattributes  README.md  analyse.py  kirq_qkd_code.py  parse,py  qkd_analysis.json
examples/kirq-demo/ETSI014/: etsi014.py  etsi014.py.bad
examples/kirq-demo/app/: Dockerfile
examples/kirq-demo/data/: qkd_sim_keys.json
examples/kirq-demo/src/: app.py  demo_decrypt_message.py  demo_decrypt_received_email.py  demo_send_encrypted_email.py  emails.py  establish_keys_qkd.py  help.py  pqc_encryption.py  requirements.txt
scripts/: install_services.sh  secure_push_entropy.sh  start_kirq_and_pusher.sh  start_kirq_hub.sh  start_kirq_hub_only.sh
services/: kirq-hub.service  kirq-pusher.service
src/: config.rs  entropy_pool.rs  main.rs  quantum_rng.rs  quantum_state.rs
src/delivery/: mod.rs  push_client.rs  quantum_harmony_push.rs  sphincs_auth.rs  tao_push.rs
src/mixing/: mod.rs
src/sources/: crypto4a.rs  decentralized.rs  mod.rs  qkd_adapter.rs  qrng.rs  quantum_vault.rs
tutorials/kirq-tutorial/: LICENSE.md  README.md  install_marimo.sh
tutorials/kirq-tutorial/qkd/: etsi014_idq.py  etsi014_toshiba.py
